# dart-unused

./: .gitignore  Cargo.toml  README.md  test_against_repos.sh  unused.config.yaml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: release.yml  security.yml  test.yml
src/: assets.rs  cli.rs  config.rs  lib.rs  localisation.rs  locator.rs  main.rs  parser.rs  pubspec.rs  util.rs
wix/: main.wxs
