[package]
name = "dart-unused"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
glob = "0.3.3"
log = "0.4.29"
# nom = "8.0.0"
nom = "7.1.3"
ouroboros = "0.18.5"
path-dedot = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml2 = "0.1.3"
simplelog = "0.12.2"
